changed fonts h1 and fixed carouel

--- a/html/courses.html
+++ b/html/courses.html
@@ -215,7 +215,7 @@
     </div>
     <div class="feedback">
         <div class="container">
-            <h1><b>Отзывы</b></h1>
+            <h1>Отзывы</h1>
             <div id="carouselFeedback" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselFeedback" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -278,7 +278,7 @@
     </div>
     <div class="container">
         <div class="contacts">
-            <h1><b>Контакты</b></h1>
+            <h1>Контакты</h1>
             <div class="contactsBlocks">
                 <div class="textContacts">
                     <div class="contactsBigText">Вам нужна помощь в подборе курса?
