--- a/html/index.html
+++ b/html/index.html
@@ -62,7 +62,7 @@
             <img src="../images/manWithComputer.png" alt="main picture" class="mainPicture">
             <div class="container">
                 <div class='textInPic'>
-                    <h1><b>Учим профессиям и навыкам</b></h1>
+                    <h1>Учим профессиям и навыкам</h1>
                     <ul>
                         <li>Раскройте свои сильные стороны</li>
                         <li>Выберите вектор развития</li>
@@ -153,7 +153,7 @@
     <div class="courses" id="courses">
         <div class="container">
             <h1>
-                <b>Курсы</b>
+                Курсы
             </h1>
             <div class="blocksOfCourses">
                 <div class="devCourses">
@@ -212,7 +212,7 @@
     </div>
     <div class="container">
         <div id="news">
-            <h1><b>Новости</b></h1>
+            <h1>Новости</h1>
             <div class="carouselNewsContainerUpper">
                 <div class="carouselNewsContainer">
                     <div id="carouselNews" class="carousel" data-bs-ride="carousel">
@@ -291,7 +291,7 @@
         <div class="about" id="about">
             <div class="textAbout">
                 <h1>
-                    <b>О нас</b>
+                    О нас
                 </h1>
                 <p>
                     Мы учим людей с нуля осваивать программирование, веб-дизайн
@@ -310,7 +310,7 @@
     </div>
     <div class="feedback">
         <div class="container">
-            <h1><b>Отзывы</b></h1>
+            <h1>Отзывы</h1>
             <div id="carouselFeedback" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselFeedback" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -373,7 +373,7 @@
     </div>
     <div class="container">
         <div class="contacts" id="contacts">
-            <h1><b>Контакты</b></h1>
+            <h1>Контакты</h1>
             <div class="contactsBlocks">
                 <div class="textContacts">
                     <div class="contactsBigText">Вам нужна помощь в подборе курса?
@@ -441,6 +441,7 @@
                 </div>
         </footer>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="../src/js/multipleCarousel.js"></script>
 </body>
